--- a/function/main_app/templates/login.html
+++ b/function/main_app/templates/login.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}
     <title>login</title>
-</head>
-<body>
+{% endblock title %}
+
+{% block contents %}
     <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
         <h1>로그인 화면</h1>
@@ -19,5 +19,4 @@
             <button type="submit">로그인</button>
         </div>
     </form>    
-</body>
-</html>
+{% endblock contents %}
