--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -11,7 +11,7 @@
 
 
 {% block contents %}
-    <h1>Main Page</h1>
+    <h1>DB Hotel</h1>
     <a href="/accounts/signup">회원가입</a> 
     {% if user.is_authenticated %}
     <a href="/accounts/logout">로그아웃</a>
