function: alter index page(for user) to reservation page

--- a/function/main_app/templates/base.html
+++ b/function/main_app/templates/base.html
@@ -12,6 +12,7 @@
             text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
 
