fix: fix DB for reservation

--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -36,7 +36,7 @@
                 <h3>예약 페이지</h3>
                 <div class="row">
                 {% for days in reserv_day %}
-                    <div class="col col-sm-2" style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: larger; font-weight: bolder;">
+                    <div class="col col-sm-2" style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
                     {% if days.day|date %}
                             <a> {{ days.day|date:"Y-m-d" }} </a>
                     {% endif %}
