--- a/function/main_app/templates/signup.html
+++ b/function/main_app/templates/signup.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load socialaccount %}
+{% providers_media_js %}
+
 {% block title %}
     <title>signup</title>
 {% endblock title %}
