--- a/function/main_app/templates/base.html
+++ b/function/main_app/templates/base.html
@@ -8,9 +8,14 @@
     {% endblock title %}
     <style>
         body{
+            background-color: ivory;
             width : 100%;
             height: 100%;
             text-align: center;
+        }
+        .navbar{
+            background-color: transparent;
+            font-size: larger;
         }
 
         
