--- a/function/main_app/templates/login.html
+++ b/function/main_app/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load socialaccount %}
+{% providers_media_js %}
+
 {% block title %}
     <title>login</title>
 {% endblock title %}
