modify base navbar

--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -7,6 +7,13 @@
 
 {% block title %}
     <title>Index Page</title>
+    <style>
+        body{
+            background-image: url("https://hilton.co.kr/static/upload/hotel_main_20141216152900_lg_pc.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+      </style>
 {% endblock title %}
 
 
