--- a/function/main_app/templates/account/base.html
+++ b/function/main_app/templates/account/base.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
+    <style>
+      body{
+          background-color: rgb(255, 255, 253);
+          width : 100%;
+          height: 100%;
+          text-align: center;
+      }
+      .navbar{
+          background-color: transparent;
+          font-size: larger;
+      }
+    </style>
   </head>
+
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="http://127.0.0.1:8000/" >DB HOTEL</a>
+      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item "><a class="nav-link" href="/reservation/">예약하기</a></li>
+              <li class="nav-item "><a class="nav-link" href="/accounts/login/">로그인</a></li>
+              <li class="nav-item "><a class="nav-link" href="/accounts/signup/">회원가입</a></li>
+          </ul>
+      </div>
+  </nav>
     {% block body %}
 
     {% if messages %}
@@ -19,22 +49,12 @@
     </div>
     {% endif %}
 
-    <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-      </ul>
-    </div>
     {% block content %}
     {% endblock %}
     {% endblock %}
     {% block extra_body %}
     {% endblock %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
