--- a/function/main_app/templates/base.html
+++ b/function/main_app/templates/base.html
@@ -8,7 +8,7 @@
     {% endblock title %}
     <style>
         body{
-            background-color: ivory;
+            background-color: rgb(255, 255, 253);
             width : 100%;
             height: 100%;
             text-align: center;
@@ -20,21 +20,19 @@
 
         
     </style>
-    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">DB is free</a>
+        <a class="navbar-brand" href="http://127.0.0.1:8000/" >DB HOTEL</a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item "><a class="nav-link" href="#">예약하기</a></li>
+            <ul class="navbar-nav navbar-right">
+                <li class="nav-item "><a class="nav-link" href="/reservation/">예약하기</a></li>
                 <li class="nav-item "><a class="nav-link" href="/accounts/login/">로그인</a></li>
-                <li class="nav-item "><a class="nav-link" href="/accounts/signup">회원가입</a></li>
+                <li class="nav-item "><a class="nav-link" href="/accounts/signup/">회원가입</a></li>
             </ul>
         </div>
     </nav>
