add: add button Go admin page in index.html(for admin view)

--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -29,6 +29,8 @@
             <a href="/accounts/logout">로그아웃</a>
         </h2>
 
+        <a href="/admin">관리자 페이지</a>
+
     
     {% else %}
         <!-- IF 관리자 계정 로그인 안 되었으면 실행되는 부분 (ELSE) -->
