--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -48,8 +48,12 @@
                 {% for days in reserv_day %}
                     <div class="col col-sm-2" style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
                     {% if days.day|date %}
-                            <a> {{ days.day|date:"Y-m-d" }} </a>
+                        <a> {{ days.day|date:"Y-m-d" }} </a> <br />
+
+                        <p> {{ room_list }} </p>
+
                     {% endif %}
+                    
                     </div>
                 {% endfor %}
                 </div>
