Add: add two function(initialize residual room, delete residual room count

--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -28,7 +28,9 @@
 
             <a href="/accounts/logout">로그아웃</a>
         </h2>
-
+            <a href="/create_reservation_calendar">예약석 초기화</a>
+            <a href="/delete_reservation_calendar">예약석 삭제</a>
+            
         <a href="/admin">관리자 페이지</a>
 
     
