--- a/function/main_app/templates/base.html
+++ b/function/main_app/templates/base.html
@@ -4,43 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap">
     {% block title %}
     {% endblock title %}
     <style>
         body{
+            font-family: 'Nanum Myeongjo', serif;
             background-color: rgb(255, 255, 253);
             width : 100%;
             height: 100%;
             text-align: center;
         }
         .navbar{
-            background-color: transparent;
+            font-family: 'Nanum Myeongjo', serif;
+            background-color:rgb(219, 204, 184);
             font-size: larger;
         }
+        .footer {
+            font-family: 'Nanum Myeongjo', serif;
+            width:100%;
+            height:100px;
+            position:absolute;
+            bottom:0;
+            background: rgb(90, 83, 74);
+            text-align: center;
+            color: black;
+        }
+        
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="http://127.0.0.1:8000/" style="font-family: 맑은 고딕; font-weight: bold; font-size: larger;">DB HOTEL</a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item "><a class="nav-link" href="/reservation/" style="font-family: 맑은 고딕; font-weight: bold; font-size: small;">예약하기</a></li>
-                <li class="nav-item "><a class="nav-link" href="/accounts/login/" style="font-family: 맑은 고딕; font-size: small;">로그인</a></li>
-                <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-family: 맑은 고딕; font-size: small;">회원가입</a></li>
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item "><a class="nav-link" href="/reservation/" style="font-weight: bold; font-size: medium;">예약하기</a></li>
             </ul>
         </div>
-      </nav>
-
+        <div class="mx-auto order-0">
+            <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger;">DB HOTEL</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item "><a class="nav-link" href="/accounts/login/" style="font-size: small;">로그인</a></li>
+                <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
+            </ul>
+        </div>
+    </nav>
 <!-- 지금 보고 있는 base.html 파일의 block contents 태그가 있는 지점에, 각각의 html 파일들의 block contents 태그 안에 있는 내용이 합쳐집니다 -->
     {% block contents %}
     {% endblock contents %}
 <!-- 즉, base.html에서 head태그 안에 있는 block title과 block contents 위 아래로 이것저것 요소들을 넣어주면, 그게 전부 각각의 html 파일들에 반영이 됩니다!-->
 <!-- 새로 만든 html 파일에는 당연히 block을 다른 html 파일들처럼 세팅을 해줘야, base.html이 적용이 됩니다. 이미 만들어져있는 html 파일들을 참고하면 이해가 될 것입니다 -->
-    
+<footer class= "footer">
+    <div class="container">
+        <br>
+        <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+            <div class="col-sm-3" style="font-weight: bold; font-size: small;"><p>서울DB호텔 T.02-1234-1234</p><p>제주DB호텔 T.064-1234-1234</p></div>
+            <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>고객센터</p><p>이용약관</p></div>
+            <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);"><p>이메일무단수집금지</p><p>개인정보처리방침</p></div>
+            <div class="col-sm-3">
+                <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
+                <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
+                <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i class="fab fa-fw fa-git"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
