--- a/function/main_app/templates/em_task_assign.html
+++ b/function/main_app/templates/em_task_assign.html
@@ -11,9 +11,13 @@
 
 {% block contents %}
 
-직원 업무 배정 페이지 
+HOUSE KEEPING PAGE
 <h3 class="my-3 border-bottom pb-2">업무 배정</h3>
+    <form method="post" class="post-form my-3"> 
     {% csrf_token %}
     {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">배정하기</button>
+    </form>
+
    
 {% endblock contents %}
