--- a/function/main_app/templates/realtime_claims.html
+++ b/function/main_app/templates/realtime_claims.html
@@ -11,9 +11,12 @@
 
 {% block contents %}
 
-실시간 고객 요청사항 
+REAL-TIME CLAIMS PAGE
 <h3 class="my-3 border-bottom pb-2">실시간 업무 배정</h3>
+    <form method="post" class="post-form my-3"> 
     {% csrf_token %}
     {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">배정하기</button>
+    </form>
    
 {% endblock contents %}
