modify base2 sidebar

--- a/function/main_app/templates/base2.html
+++ b/function/main_app/templates/base2.html
@@ -102,7 +102,7 @@
                 <a href="/realtimeclaims/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">실시간 업무 배정</a>
                 <a href="#" class="list-group-item list-group-item-action"
-                    style="background-color: rgb(219, 204, 184);">+ 생겨날 메뉴</a>
+                    style="background-color: rgb(219, 204, 184);">생겨날 메뉴</a>
                 <a href="/admin/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">admin 페이지</a>    
             </div>
