--- a/function/main_app/templates/base2.html
+++ b/function/main_app/templates/base2.html
@@ -98,7 +98,7 @@
                 <a href="/employeeattendance/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">직원 출퇴근</a>
                 <a href="/emtaskassign/" class="list-group-item list-group-item-action"
-                    style="background-color: rgb(219, 204, 184);">직원 업무 배정</a>
+                    style="background-color: rgb(219, 204, 184);">하우스 키핑</a>
                 <a href="/realtimeclaims/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">실시간 업무 배정</a>
                 <a href="#" class="list-group-item list-group-item-action"
