--- a/function/main_app/templates/realtime_claims.html
+++ b/function/main_app/templates/realtime_claims.html
@@ -11,12 +11,14 @@
 
 {% block contents %}
 
-REAL-TIME CLAIMS PAGE
-<h3 class="my-3 border-bottom pb-2">실시간 업무 배정</h3>
+<div class="para">
+    <h3 class="my-3 border-bottom pb-2">실시간 업무 배정</h3>
     <form method="post" class="post-form my-3"> 
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">배정하기</button>
+    <button type="submit" class="btn btn-dark">배정하기</button>
     </form>
+</div>
+
    
 {% endblock contents %}
