--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} <!-- base.html 파일(템플릿을 구성하는 파일)을 현재 html에 적용시켜주는 부분(아랫줄의 load static도 같이 있어야 됩니당)-->
+{% extends "base.html" %}
+<!-- base.html 파일(템플릿을 구성하는 파일)을 현재 html에 적용시켜주는 부분(아랫줄의 load static도 같이 있어야 됩니당)-->
 {% load static %}
 
 {% load socialaccount %}
@@ -6,104 +7,114 @@
 
 
 {% block title %}
-    <title>Index Page</title>
-    <style>
-        body{
-            width: 100%;
-            height: 800px;
-        }      
-      </style>
+<title>Index Page</title>
+<style>
+  body {
+    width: 100%;
+    height: 800px;
+  }
+</style>
 {% endblock title %}
 
 
 {% block contents %}
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141601_lg_pc.jpg" height="610" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152900_lg_pc.jpg" height="610" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152904_lg_pc.jpg" height="610" class="d-block w-100" alt="...">
-      </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20170703141601_lg_pc.jpg" height="610"
+        class="d-block w-100" alt="...">
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152900_lg_pc.jpg" height="610"
+        class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://hilton.co.kr/static/upload/hotel_main_20141216152904_lg_pc.jpg" height="610"
+        class="d-block w-100" alt="...">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-    {% if request.user.is_superuser %}
-    <!-- IF 관리자 계정(superuser로 로그인 검증) 로그인 된 상태일시 실행되는 부분 -->
-        <p>관리자 유저로 로그인 되었습니다. &nbsp;<a href="/accounts/logout">로그아웃</a></p>
+{% if request.user.is_superuser %}
+<!-- IF 관리자 계정(superuser로 로그인 검증) 로그인 된 상태일시 실행되는 부분 -->
+<p>관리자 유저로 로그인 되었습니다. &nbsp;<a href="/accounts/logout">로그아웃</a></p>
 
-        <a href="/create_reservation_calendar">예약석 초기화 &nbsp;&nbsp;</a>
-        <a href="/delete_reservation_calendar">예약석 삭제 &nbsp;&nbsp;</a>    
-        <a href="/admin">관리자 페이지 &nbsp;&nbsp;</a>
-        <a href="/employeeattendance/">관리자 메뉴</a>
+<a href="/create_reservation_calendar">예약석 초기화 &nbsp;&nbsp;</a>
+<a href="/delete_reservation_calendar">예약석 삭제 &nbsp;&nbsp;</a>
+<a href="/admin">관리자 페이지 &nbsp;&nbsp;</a>
+<a href="/employeeattendance/">관리자 메뉴</a>
 
 
-    
-    {% else %}
-        <!-- IF 관리자 계정 로그인 안 되었으면 실행되는 부분 (ELSE) -->
-        {% if user.is_authenticated %}
-        <!-- IF 일반 유저 계정 로그인 되었으면 실행되는 부분 -->
-        {% now "Y-m-d" as todays_date %}
-        <a href="/accounts/logout">로그아웃</a>
-        {% csrf_token %}
-        <h1>일반 유저로 로그인 중</h1>
 
-            <div>
-                <h3>예약 페이지</h3>
-                <a href="/reservation">예약하러 가기</a>
-                <div class="row">
-                <!-- 캘린더형 div 구현 + 날짜 보여주는 텍스트 부분 -->
-                {% for days in reserv_day %}
-                    <div class="col col-sm-2" style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
-                    {% if days.day|date %}
-                        <a> {{ days.day|date:"Y-m-d" }} </a> <br />
-                    {% endif %}
+{% else %}
+<!-- IF 관리자 계정 로그인 안 되었으면 실행되는 부분 (ELSE) -->
+{% if user.is_authenticated %}
+<!-- IF 일반 유저 계정 로그인 되었으면 실행되는 부분 -->
+{% now "Y-m-d" as todays_date %}
+<p>일반 유저로 로그인 되었습니다. &nbsp;<a href="/accounts/logout">로그아웃</a></p>
+{% csrf_token %}
 
-                        <!-- Grade별 남은 예약 가능한 자리를 보여주는 텍스트 부분 -->
-                        <div style="font-size: large;">
-                            {% for date in room_list %}
-                            {% if days.day == date.day_id %}
-                                {{ date.room_grade_id }} : 
-                                {{ date.reservation_count }} <br />
-                            {% endif %}
-                        {% endfor %}
-                        </div>
+<div>
+  <h3>예약 페이지</h3>
+  <a href="/reservation">예약하러 가기</a>
+  <div class="row">
+    <!-- 캘린더형 div 구현 + 날짜 보여주는 텍스트 부분 -->
+    {% for days in reserv_day %}
+    <div class="col col-sm-2"
+      style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
+      {% if days.day|date %}
+      <a> {{ days.day|date:"Y-m-d" }} </a> <br />
+      {% endif %}
 
-                    </div>
-                {% endfor %}
-                </div>
-            </div>
-
-        {% else %}
-        <!-- 일반 유저 계정으로도 로그인 안 되었으면(비로그인 상태) 실행되는 부분 -->
-
-        <form method="POST" action="{% url 'login' %}">
-            {% csrf_token %}
-
-            <div class="container">
-                <br>
-                <div class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-3"><p style="display: inline; font-weight: bolder; font-size: smaller;">아이디 &nbsp;<input name="username" type="text" required></p></div>
-                    <div class="col-sm-3"><p style="display: inline; font-weight: bolder; font-size: smaller;">비밀번호 &nbsp;<input name="password" type="password" required></p></div>
-                    <div class="col-sm-2"><button type="submit" class="btn btn-dark btn-sm btn-block" style="margin:auto;">로그인</button></div>
-                    <div class="col-sm-2"></div>
-                </div>
-            </div>
-        </form>    
+      <!-- Grade별 남은 예약 가능한 자리를 보여주는 텍스트 부분 -->
+      <div style="font-size: large;">
+        {% for date in room_list %}
+        {% if days.day == date.day_id %}
+        {{ date.room_grade_id }} :
+        {{ date.reservation_count }} <br />
         {% endif %}
-    {% endif %}
+        {% endfor %}
+      </div>
+
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
+{% else %}
+<!-- 일반 유저 계정으로도 로그인 안 되었으면(비로그인 상태) 실행되는 부분 -->
+
+<form method="POST" action="{% url 'login' %}">
+  {% csrf_token %}
+
+  <div class="container">
+    <br>
+    <div class="row">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-3">
+        <p style="display: inline; font-weight: bolder; font-size: smaller;">아이디 &nbsp;<input name="username"
+            type="text" required></p>
+      </div>
+      <div class="col-sm-3">
+        <p style="display: inline; font-weight: bolder; font-size: smaller;">비밀번호 &nbsp;<input name="password"
+            type="password" required></p>
+      </div>
+      <div class="col-sm-2"><button type="submit" class="btn btn-dark btn-sm btn-block"
+          style="margin:auto;">로그인</button></div>
+      <div class="col-sm-2"></div>
+    </div>
+  </div>
+</form>
+{% endif %}
+{% endif %}
 
 
 {% endblock contents %}
