--- a/function/main_app/templates/reservation.html
+++ b/function/main_app/templates/reservation.html
@@ -13,7 +13,7 @@
 
 {% if not not_empty_rooms %}
     <h3 class="my-3 border-bottom pb-2">예약하기</h3>
-    <form method="post" class="post-form my-3">
+    <form method="post" class="post-form my-3" style="width: 20%; margin: 0 auto;">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">예약하기</button>
