--- a/function/main_app/templates/base2.html
+++ b/function/main_app/templates/base2.html
@@ -19,12 +19,15 @@
             width: 100%;
             height: 100%;
             text-align: center;
-            
+
         }
-        .para{
+
+        .para {
             margin-top: 100px;
         }
+
         .navbar {
+            height: 80px;
             font-family: 'Nanum Myeongjo', serif;
             background-color: rgb(219, 204, 184);
             font-size: larger;
@@ -104,10 +107,14 @@
                     style="background-color: rgb(219, 204, 184);">하우스 키핑</a>
                 <a href="/realtimeclaims/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">실시간 업무 배정</a>
+                <a href="/create_reservation_calendar" class="list-group-item list-group-item-action"
+                    style="background-color: rgb(219, 204, 184);">예약석 초기화</a>
+                <a href="/delete_reservation_calendar" class="list-group-item list-group-item-action"
+                    style="background-color: rgb(219, 204, 184);">예약석 삭제</a>
                 <a href="#" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">생겨날 메뉴</a>
                 <a href="/admin/" class="list-group-item list-group-item-action"
-                    style="background-color: rgb(219, 204, 184);">admin 페이지</a>    
+                    style="background-color: rgb(219, 204, 184);">admin 페이지</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
