--- a/function/main_app/templates/reservation.html
+++ b/function/main_app/templates/reservation.html
@@ -1,44 +1,97 @@
-{% extends "base.html" %}
-{% load static %}
-{% load socialaccount %}
-{% providers_media_js %}
+<!DOCTYPE html>
+<html lang="ko">
 
-
-{% block title %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap">
+    {% load static %}
+    {% load socialaccount %}
+    {% providers_media_js %}
     <title>Reservation Page</title>
-{% endblock title %}
+    <style>
+        body {
+            font-family: 'Nanum Myeongjo', serif;
+            background-color: rgb(255, 255, 253);
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
 
+        .navbar {
+            height: 80px;
+            font-family: 'Nanum Myeongjo', serif;
+            background-color: rgb(219, 204, 184);
+            font-size: larger;
+        }
 
-{% block contents %}
+        .footer {
+            font-family: 'Nanum Myeongjo', serif;
+            position: absolute;
+            width: 100%;
+            height: 100px;
+            bottom: 0;
+            background: rgb(90, 83, 74);
+            text-align: center;
+            color: black;
+        }
+    </style>
+</head>
 
-{% if not not_empty_rooms %}
+<body>
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item "><a class="nav-link" href="/reservation/"
+                        style="font-weight: bold; font-size: medium;">예약하기</a></li>
+            </ul>
+        </div>
+        <div class="mx-auto order-0">
+            <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/"
+                style="font-weight: bold; font-size: larger;">DB HOTEL</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item "><a class="nav-link" href="/accounts/login/" style="font-size: small;">로그인</a></li>
+                <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- 지금 보고 있는 base.html 파일의 block contents 태그가 있는 지점에, 각각의 html 파일들의 block contents 태그 안에 있는 내용이 합쳐집니다 -->
+    {% if not not_empty_rooms %}
     <h3 class="my-3 border-bottom pb-2">예약하기</h3>
     <form method="post" class="post-form my-3" style="width: 20%; margin: 0 auto;">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">예약하기</button>
-        <input type="button" value="뒤로가기" class="btn btn-primary" onClick="history.go(-1)">
+        <button type="submit" class="btn btn-dark">예약하기</button>
+        <input type="button" value="뒤로가기" class="btn btn-dark" onClick="history.go(-1)">
     </form>
-{% endif %}
-    
-{% if not_empty_rooms %}
-    <div id="not_empty_rooms_message" title = "not_empty_rooms_message">
+    {% endif %}
+
+    {% if not_empty_rooms %}
+    <div id="not_empty_rooms_message" title="not_empty_rooms_message">
         <br />
         <p style="font-size: large;">해당 등급의 예약 가능한 객실이 없는 날짜가 포함되어 있습니다.</p>
-        <input type="button" value="뒤로가기" class="btn btn-primary" onClick="history.go(-1)">
+        <input type="button" value="뒤로가기" class="btn btn-dark" onClick="history.go(-1)">
     </div>
-{% endif %}
+    {% endif %}
 
     <script>
         $(function () {
             $('.datetime-input').datetimepicker({
-                format:'YYYY-MM-DD'
+                format: 'YYYY-MM-DD'
             });
         });
 
-        $(document).ready(function() {
-            $(function() {
-                $( "#not_empty_rooms_message" ).dialog({
+        $(document).ready(function () {
+            $(function () {
+                $("#not_empty_rooms_message").dialog({
                     modal: true,
                     closeOnEscape: false,
                     dialogClass: "no-close",
@@ -48,8 +101,8 @@
                     buttons: [
                         {
                             text: "OK",
-                            click: function() {
-                            $( this ).dialog( "close" );
+                            click: function () {
+                                $(this).dialog("close");
                             }
                         }
                     ]
@@ -57,4 +110,40 @@
             });
         });
     </script>
-{% endblock contents %}
+    <!-- 즉, base.html에서 head태그 안에 있는 block title과 block contents 위 아래로 이것저것 요소들을 넣어주면, 그게 전부 각각의 html 파일들에 반영이 됩니다!-->
+    <!-- 새로 만든 html 파일에는 당연히 block을 다른 html 파일들처럼 세팅을 해줘야, base.html이 적용이 됩니다. 이미 만들어져있는 html 파일들을 참고하면 이해가 될 것입니다 -->
+    <footer class="footer">
+        <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-2" style="text-align: center; font-weight: bold;">DB<br>HOTEL</div>
+                <div class="col-sm-3" style="font-weight: bold; font-size: small;">
+                    <p>서울DB호텔 T.02-1234-1234</p>
+                    <p>제주DB호텔 T.064-1234-1234</p>
+                </div>
+                <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+                    <p>고객센터</p>
+                    <p>이용약관</p>
+                </div>
+                <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+                    <p>이메일무단수집금지</p>
+                    <p>개인정보처리방침</p>
+                </div>
+                <div class="col-sm-3">
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i
+                            class="fab fa-fw fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i
+                            class="fab fa-fw fa-instagram"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1"
+                        href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i
+                            class="fab fa-fw fa-git"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
