--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -105,7 +105,7 @@
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item "><a class="nav-link" href="/accounts/login/" style="font-size: small;">로그인</a></li>
+          <li class="nav-item "><a class="nav-link" href="/accounts/logout" style="font-size: small;">로그아웃</a></li>
           <li class="nav-item "><a class="nav-link" href="/accounts/signup/" style="font-size: small;">회원가입</a></li>
       </ul>
   </div>
@@ -135,34 +135,30 @@
   </a>
 </div>
 {% now "Y-m-d" as todays_date %}
-<p>일반 유저로 로그인 되었습니다. &nbsp;<a href="/accounts/logout">로그아웃</a></p>
 {% csrf_token %}
-
 <div>
-  <h3>예약 페이지</h3>
-  <a href="/reservation">예약하러 가기</a>
+  <h3><br>예약 페이지<br></h3>
   <div class="row">
     <!-- 캘린더형 div 구현 + 날짜 보여주는 텍스트 부분 -->
     {% for days in reserv_day %}
-    <div class="col col-sm-2"
-      style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
-      {% if days.day|date %}
-      <a> {{ days.day|date:"Y-m-d" }} </a> <br />
-      {% endif %}
+    <div class="col col-sm-2" style=" height: 200px; border:1px solid cadetblue; background-color: azure; font-size: 30px; font-weight: bolder;">
+    {% if days.day|date %}
+        <a> {{ days.day|date:"Y-m-d" }} </a> <br />
+    {% endif %}
 
-      <!-- Grade별 남은 예약 가능한 자리를 보여주는 텍스트 부분 -->
-      <div style="font-size: large;">
-        {% for date in room_list %}
-        {% if days.day == date.day_id %}
-        {{ date.room_grade_id }} :
-        {{ date.reservation_count }} <br />
-        {% endif %}
+        <!-- Grade별 남은 예약 가능한 자리를 보여주는 텍스트 부분 -->
+        <div style="font-size: large;">
+            {% for date in room_list %}
+            {% if days.day == date.day_id %}
+                {{ date.room_grade_id }} : 
+                {{ date.reservation_count }} <br />
+            {% endif %}
         {% endfor %}
-      </div>
+        </div>
 
     </div>
-    {% endfor %}
-  </div>
+{% endfor %}
+</div>
 </div>
 <footer class= "footer">
   <div class="container">
@@ -187,7 +183,6 @@
 <nav class="navbar navbar-expand-md navbar-light">
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item "><a class="nav-link" href="/reservation/" style="font-weight: bold; font-size: medium;">예약하기</a></li>
       </ul>
   </div>
   <div class="mx-auto order-0">
